--- a/Temporary_Website/index.html
+++ b/Temporary_Website/index.html
@@ -64,7 +64,16 @@
             text-align: left;
         }
 
+        .credits-section {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+
         .credit-item {
+            display: flex;
+            flex-direction: column;
+            flex-basis: calc(50% - 20px);
             margin-bottom: 10px;
             text-align: left;
         }
@@ -121,59 +130,71 @@
     <h2>Credits</h2>
 
     <div class="credit-category">Founder</div>
-    <div class="credit-item">
-        <div class="credit-name">Alice Brown</div>
-        <div class="credit-role">Founder</div>
+    <div class="credits-section">
+        <div class="credit-item">
+            <div class="credit-name">Alice Brown</div>
+            <div class="credit-role">Founder</div>
+        </div>
     </div>
 
     <div class="credit-category">Research and Engineering</div>
-    <div class="credit-item">
-        <div class="credit-name">Emily White</div>
-        <div class="credit-role">Mechanical Engineer</div>
-    </div>
-    <div class="credit-item">
-        <div class="credit-name">David Green</div>
-        <div class="credit-role">Electrical Engineer</div>
+    <div class="credits-section">
+        <div class="credit-item">
+            <div class="credit-name">Emily White</div>
+            <div class="credit-role">Mechanical Engineer</div>
+        </div>
+        <div class="credit-item">
+            <div class="credit-name">David Green</div>
+            <div class="credit-role">Electrical Engineer</div>
+        </div>
     </div>
 
     <div class="credit-category">3D Printing and Structural Engineering</div>
-    <div class="credit-item">
-        <div class="credit-name">Michael Blue</div>
-        <div class="credit-role">Structural Engineer</div>
-    </div>
-    <div class="credit-item">
-        <div class="credit-name">Sarah Black</div>
-        <div class="credit-role">3D Printing Specialist</div>
+    <div class="credits-section">
+        <div class="credit-item">
+            <div class="credit-name">Michael Blue</div>
+            <div class="credit-role">Structural Engineer</div>
+        </div>
+        <div class="credit-item">
+            <div class="credit-name">Sarah Black</div>
+            <div class="credit-role">3D Printing Specialist</div>
+        </div>
     </div>
 
     <div class="credit-category">Software Engineering</div>
-    <div class="credit-item">
-        <div class="credit-name">Chris Red</div>
-        <div class="credit-role">Frontend Developer</div>
-    </div>
-    <div class="credit-item">
-        <div class="credit-name">Jessica Yellow</div>
-        <div class="credit-role">Backend Developer</div>
+    <div class="credits-section">
+        <div class="credit-item">
+            <div class="credit-name">Chris Red</div>
+            <div class="credit-role">Frontend Developer</div>
+        </div>
+        <div class="credit-item">
+            <div class="credit-name">Jessica Yellow</div>
+            <div class="credit-role">Backend Developer</div>
+        </div>
     </div>
 
     <div class="credit-category">Advisors</div>
-    <div class="credit-item">
-        <div class="credit-name">Oliver Gray</div>
-        <div class="credit-role">Technical Advisor</div>
-    </div>
-    <div class="credit-item">
-        <div class="credit-name">Sophia Violet</div>
-        <div class="credit-role">Business Advisor</div>
+    <div class="credits-section">
+        <div class="credit-item">
+            <div class="credit-name">Oliver Gray</div>
+            <div class="credit-role">Technical Advisor</div>
+        </div>
+        <div class="credit-item">
+            <div class="credit-name">Sophia Violet</div>
+            <div class="credit-role">Business Advisor</div>
+        </div>
     </div>
 
     <div class="credit-category">Members</div>
-    <div class="credit-item">
-        <div class="credit-name">Lucas Orange</div>
-        <div class="credit-role">Team Member</div>
-    </div>
-    <div class="credit-item">
-        <div class="credit-name">Mia Pink</div>
-        <div class="credit-role">Team Member</div>
+    <div class="credits-section">
+        <div class="credit-item">
+            <div class="credit-name">Lucas Orange</div>
+            <div class="credit-role">Team Member</div>
+        </div>
+        <div class="credit-item">
+            <div class="credit-name">Mia Pink</div>
+            <div class="credit-role">Team Member</div>
+        </div>
     </div>
 </section>
 
