--- a/Temporary_Website/index.html
+++ b/Temporary_Website/index.html
@@ -18,17 +18,46 @@
         .full-screen {
             height: 100vh;
             display: flex;
+            flex-direction: column;
             align-items: center;
             justify-content: center;
             padding: 0 20px;
             box-sizing: border-box;
         }
 
-        h1 {
-            white-space: pre;
-            font-size: 1.5rem;
+        .image-box {
+            width: 300px;
+            height: 300px;
+            background-image: url('background.png');
+            background-size: cover;
+            background-position: center;
+            border-radius: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            margin-bottom: 20px;
+        }
+
+        .button-container {
+            display: flex;
+            justify-content: space-between;
+            width: 320px;
+            margin-top: 20px;
+        }
+
+        .button {
+            padding: 10px 20px;
+            border: none;
+            border-radius: 20px;
+            cursor: pointer;
+            font-size: 1rem;
             text-align: center;
-            margin: 0;
+            color: white;
+            background-color: #333;
+            text-decoration: none;
+            display: inline-block;
+        }
+
+        .button:hover {
+            background-color: #555;
         }
 
         section {
@@ -90,7 +119,7 @@
         }
 
         #contact {
-            text-align: center;
+            text-align: left;
             margin-top: 50px;
         }
 
@@ -98,27 +127,17 @@
             from { width: 0; }
             to { width: 100%; }
         }
-
-        .typewriter {
-            overflow: hidden;
-            border-right: .15em solid #333;
-            white-space: nowrap;
-            margin: 0 auto;
-            animation: typing 4s steps(40, end);
-        }
     </style>
 </head>
 <body>
 
 <div class="full-screen">
-    <h1 class="typewriter">
-        _____ _       _____ <br>
-        /\    / ____| |     / ____|<br>
-       /  \  | (___ | |    | (___  <br>
-      / /\ \  \___ \| |     \___ \ <br>
-     / ____ \ ____) | |____ ____) |<br>
-    /_/    \_\_____/|______|_____/ <br>
-    </h1>
+    <div class="image-box"></div>
+
+    <div class="button-container">
+        <a href="#" class="button">Documentation & Showcase</a>
+        <a href="#" class="button">GitHub & Instagram</a>
+    </div>
 </div>
 
 <section class="fade-in" id="info">
