--- a/Temporary_Website/index.html
+++ b/Temporary_Website/index.html
@@ -26,38 +26,44 @@
         }
 
         .image-box {
-            width: 300px;
-            height: 300px;
+            width: 80%;
+            max-width: 800px;
+            height: auto;
+            padding-top: 45%; /* 16:9 aspect ratio */
             background-image: url('background.png');
             background-size: cover;
             background-position: center;
             border-radius: 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             margin-bottom: 20px;
+            position: relative;
         }
 
         .button-container {
             display: flex;
-            justify-content: space-between;
-            width: 320px;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 20px;
             margin-top: 20px;
         }
 
         .button {
             padding: 10px 20px;
-            border: none;
+            border: 2px solid #333;
             border-radius: 20px;
             cursor: pointer;
             font-size: 1rem;
             text-align: center;
-            color: white;
-            background-color: #333;
+            color: #333;
+            background-color: white;
             text-decoration: none;
             display: inline-block;
+            transition: background-color 0.3s, color 0.3s;
         }
 
         .button:hover {
-            background-color: #555;
+            background-color: #333;
+            color: white;
         }
 
         section {
@@ -122,11 +128,6 @@
             text-align: left;
             margin-top: 50px;
         }
-
-        @keyframes typing {
-            from { width: 0; }
-            to { width: 100%; }
-        }
     </style>
 </head>
 <body>
@@ -135,8 +136,10 @@
     <div class="image-box"></div>
 
     <div class="button-container">
-        <a href="#" class="button">Documentation & Showcase</a>
-        <a href="#" class="button">GitHub & Instagram</a>
+        <a href="#" class="button">Documentation</a>
+        <a href="#" class="button">Showcase</a>
+        <a href="#" class="button">GitHub</a>
+        <a href="#" class="button">Instagram</a>
     </div>
 </div>
 
