--- a/Temporary_Website/index.html
+++ b/Temporary_Website/index.html
@@ -21,22 +21,21 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            padding: 0 20px;
+            padding: 0;
             box-sizing: border-box;
         }
 
         .image-box {
-            width: 80%;
-            max-width: 800px;
+            width: 100%;
+            max-width: 1200px;
             height: auto;
-            padding-top: 45%; /* 16:9 aspect ratio */
+            padding-top: 56.25%; /* 16:9 aspect ratio */
             background-image: url('background.png');
             background-size: cover;
             background-position: center;
             border-radius: 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             margin-bottom: 20px;
-            position: relative;
         }
 
         .button-container {
@@ -45,6 +44,8 @@
             flex-wrap: wrap;
             gap: 20px;
             margin-top: 20px;
+            padding: 0 20px;
+            box-sizing: border-box;
         }
 
         .button {
