--- a/Temporary_Website/index.html
+++ b/Temporary_Website/index.html
@@ -155,7 +155,7 @@
     <div class="credit-category">Founder</div>
     <div class="credits-section">
         <div class="credit-item">
-            <div class="credit-name">Alice Brown</div>
+            <div class="credit-name">Name-1</div>
             <div class="credit-role">Founder</div>
         </div>
     </div>
@@ -163,11 +163,11 @@
     <div class="credit-category">Research and Engineering</div>
     <div class="credits-section">
         <div class="credit-item">
-            <div class="credit-name">Emily White</div>
+            <div class="credit-name">Name-2</div>
             <div class="credit-role">Mechanical Engineer</div>
         </div>
         <div class="credit-item">
-            <div class="credit-name">David Green</div>
+            <div class="credit-name">Name-3</div>
             <div class="credit-role">Electrical Engineer</div>
         </div>
     </div>
@@ -175,11 +175,11 @@
     <div class="credit-category">3D Printing and Structural Engineering</div>
     <div class="credits-section">
         <div class="credit-item">
-            <div class="credit-name">Michael Blue</div>
+            <div class="credit-name">Name-4</div>
             <div class="credit-role">Structural Engineer</div>
         </div>
         <div class="credit-item">
-            <div class="credit-name">Sarah Black</div>
+            <div class="credit-name">Name-5</div>
             <div class="credit-role">3D Printing Specialist</div>
         </div>
     </div>
@@ -187,11 +187,11 @@
     <div class="credit-category">Software Engineering</div>
     <div class="credits-section">
         <div class="credit-item">
-            <div class="credit-name">Chris Red</div>
+            <div class="credit-name">Name-6</div>
             <div class="credit-role">Frontend Developer</div>
         </div>
         <div class="credit-item">
-            <div class="credit-name">Jessica Yellow</div>
+            <div class="credit-name">Name-7</div>
             <div class="credit-role">Backend Developer</div>
         </div>
     </div>
@@ -199,11 +199,11 @@
     <div class="credit-category">Advisors</div>
     <div class="credits-section">
         <div class="credit-item">
-            <div class="credit-name">Oliver Gray</div>
+            <div class="credit-name">Name-8</div>
             <div class="credit-role">Technical Advisor</div>
         </div>
         <div class="credit-item">
-            <div class="credit-name">Sophia Violet</div>
+            <div class="credit-name">Name-9</div>
             <div class="credit-role">Business Advisor</div>
         </div>
     </div>
@@ -211,11 +211,11 @@
     <div class="credit-category">Members</div>
     <div class="credits-section">
         <div class="credit-item">
-            <div class="credit-name">Lucas Orange</div>
+            <div class="credit-name">Name-10</div>
             <div class="credit-role">Team Member</div>
         </div>
         <div class="credit-item">
-            <div class="credit-name">Mia Pink</div>
+            <div class="credit-name">Name-11</div>
             <div class="credit-role">Team Member</div>
         </div>
     </div>
