--- a/Temporary_Website/index.html
+++ b/Temporary_Website/index.html
@@ -223,7 +223,7 @@
 
 <section class="fade-in" id="contribute">
     <h2>Contribute</h2>
-    <p>We're a small, self-funded, fully-distributed team and we're actively hiring!<br><br>
+    <p>We're a small, self-funded, fully-distributed team and we're actively looking for contributers!<br><br>
 
     Come help us scale, explore, and build humanist infrastructure focused on amplifying the human mind and spirit.<br><br>
 
