--- a/Project_Website/index.html
+++ b/Project_Website/index.html
@@ -52,10 +52,10 @@
                 <div class="about-text">
                     <p>
                         The Design Build Fly team at Mukesh Patel School of Technology Management and Engineering is dedicated 
-                        to advancing aerospace education through hands-on experiences. Our members are passionate students, 
-                        innovators, and engineers-in-training who design and construct unique aircraft for prestigious 
-                        international competitions. We integrate technology, creativity, and teamwork to achieve flight 
-                        systems that push boundaries and inspire the next generation of aerospace leaders.
+                        to advancing aerospace education through hands-on experience. Our members are passionate innovators 
+                        and engineers-in-training who design and construct unique aircraft for international competitions. 
+                        Our work blends technology, creativity, and collaboration, striving to achieve excellence and inspire 
+                        the next generation of aerospace pioneers.
                     </p>
                 </div>
                 <div class="about-image">
@@ -69,45 +69,41 @@
     <section class="timeline section-padding" id="timeline">
         <div class="container">
             <h2 class="section-title">Our Journey</h2>
-            <p class="section-subtitle">A chronological glance at our milestones and achievements.</p>
+            <p class="section-subtitle">Milestones that shaped our path in 2024.</p>
             <div class="timeline-container">
+                <!-- Event 1 -->
                 <div class="timeline-item">
-                    <div class="timeline-date">2020</div>
+                    <div class="timeline-date">21 July 2024</div>
                     <div class="timeline-content">
                         <h3>Team Formation</h3>
-                        <p>Our team was formed by a small group of enthusiasts who shared a common goal: to design and build a winning aircraft for the DBF competition.</p>
+                        <p>A group of dedicated students came together, laying the foundation for our Design Build Fly initiative. This day marked the beginning of our pursuit to create innovative aerial solutions.</p>
                     </div>
                 </div>
 
+                <!-- Event 2 -->
                 <div class="timeline-item">
-                    <div class="timeline-date">2021</div>
+                    <div class="timeline-date">29 October 2024</div>
                     <div class="timeline-content">
-                        <h3>First Competition Entry</h3>
-                        <p>We submitted our first prototype aircraft to the international DBF challenge and gained invaluable experience from the design and testing processes.</p>
+                        <h3>Proposal Submission</h3>
+                        <p>After weeks of ideation and refinement, we submitted our official project proposal to the international DBF competition, outlining our aircraft design concepts and strategies.</p>
                     </div>
                 </div>
 
+                <!-- Event 3 -->
                 <div class="timeline-item">
-                    <div class="timeline-date">2022</div>
+                    <div class="timeline-date">22 November 2024</div>
                     <div class="timeline-content">
-                        <h3>Improved Aerodynamics</h3>
-                        <p>Incorporating computational fluid dynamics and advanced materials, we refined our aircraft design, improving lift-to-drag ratios and overall performance.</p>
+                        <h3>Proposal Results</h3>
+                        <p>Our proposal results arrived, placing us 27th globally, 3rd in Asia, and 1st in India. This recognition fueled our determination to push even harder towards our goals.</p>
                     </div>
                 </div>
 
+                <!-- Event 4 -->
                 <div class="timeline-item">
-                    <div class="timeline-date">2023</div>
+                    <div class="timeline-date">14 December 2024</div>
                     <div class="timeline-content">
-                        <h3>Top Rankings Achieved</h3>
-                        <p>Our aircraft excelled in international competitions, earning top spots and recognition for its innovative design and execution.</p>
-                    </div>
-                </div>
-                
-                <div class="timeline-item">
-                    <div class="timeline-date">2024</div>
-                    <div class="timeline-content">
-                        <h3>Next Generation Aircraft</h3>
-                        <p>With new members and ideas onboard, we’re currently developing our next prototype, pushing the boundaries of flight once again.</p>
+                        <h3>Airframe Construction Begins</h3>
+                        <p>With the groundwork set, we moved from theory to action. Our team started the manual construction of the aircraft’s airframe, turning our designs into a tangible reality.</p>
                     </div>
                 </div>
             </div>
@@ -118,27 +114,53 @@
     <section class="team section-padding" id="team">
         <div class="container">
             <h2 class="section-title">Meet Our Team</h2>
-            <p class="section-subtitle">A group of passionate students, engineers, and innovators.</p>
+            <p class="section-subtitle">A group of passionate students and innovators driving our vision forward.</p>
             <div class="team-grid">
+                <!-- Adjust image paths as needed. Currently using placeholder images. -->
                 <div class="team-member">
-                    <img src="images/team-member1.jpg" alt="Team Member 1">
-                    <h3>John Doe</h3>
-                    <p>Aerodynamics Lead</p>
+                    <img src="images/team-member1.jpg" alt="Zarvan Movdawalla">
+                    <h3>Zarvan Movdawalla</h3>
+                    <p>Team Captain & Project Lead</p>
                 </div>
                 <div class="team-member">
-                    <img src="images/team-member2.jpg" alt="Team Member 2">
-                    <h3>Jane Smith</h3>
-                    <p>Structural Engineer</p>
+                    <img src="images/team-member2.jpg" alt="Mithil Gogri">
+                    <h3>Mithil Gogri</h3>
+                    <p>Aerodynamics Specialist</p>
                 </div>
                 <div class="team-member">
-                    <img src="images/team-member1.jpg" alt="Team Member 3">
-                    <h3>Michael Lee</h3>
-                    <p>Avionics Specialist</p>
+                    <img src="images/team-member1.jpg" alt="Agastya Hukoo">
+                    <h3>Agastya Hukoo</h3>
+                    <p>Structures Engineer</p>
                 </div>
                 <div class="team-member">
-                    <img src="images/team-member2.jpg" alt="Team Member 4">
-                    <h3>Emily Chen</h3>
-                    <p>Project Manager</p>
+                    <img src="images/team-member2.jpg" alt="Gyaan Jhunjhunwala">
+                    <h3>Gyaan Jhunjhunwala</h3>
+                    <p>Avionics & Electronics</p>
+                </div>
+                <div class="team-member">
+                    <img src="images/team-member1.jpg" alt="Priya Shah">
+                    <h3>Priya Shah</h3>
+                    <p>Propulsion Specialist</p>
+                </div>
+                <div class="team-member">
+                    <img src="images/team-member2.jpg" alt="Karan Jain">
+                    <h3>Karan Jain</h3>
+                    <p>Materials Engineer</p>
+                </div>
+                <div class="team-member">
+                    <img src="images/team-member1.jpg" alt="Riya Mehta">
+                    <h3>Riya Mehta</h3>
+                    <p>Safety Officer</p>
+                </div>
+                <div class="team-member">
+                    <img src="images/team-member2.jpg" alt="Aarav Patel">
+                    <h3>Aarav Patel</h3>
+                    <p>Flight Testing Lead</p>
+                </div>
+                <div class="team-member">
+                    <img src="images/team-member1.jpg" alt="Neha Singh">
+                    <h3>Neha Singh</h3>
+                    <p>Communications Coordinator</p>
                 </div>
             </div>
         </div>
@@ -148,7 +170,7 @@
     <section class="contact section-padding" id="contact">
         <div class="container">
             <h2 class="section-title">Get in Touch</h2>
-            <p class="section-subtitle">We’d love to hear from you. Reach out with your questions and collaborations.</p>
+            <p class="section-subtitle">We’d love to hear from you. Reach out with your questions or collaborations.</p>
             <form class="contact-form">
                 <div class="form-row">
                     <input type="text" placeholder="Name" required>
